[gd_scene load_steps=2 format=3 uid="uid://nffbgp1naxa1"]

[ext_resource type="Script" path="res://Scenes/PauseUi.gd" id="1_ellje"]

[node name="PauseUI" type="CanvasLayer"]
process_mode = 3
layer = 2
visible = false
script = ExtResource("1_ellje")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Resume" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Resume
"

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ExitToMainMenu" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Exit to Main Menu"

[node name="QuitToDesktop" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit to Desktop"

[node name="Control2" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ExitToMainMenu" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/QuitToDesktop" to="." method="_on_quit_pressed"]
